crates/willikins-cli/tests/snapshots/walter_document__walter_render_walter_ci_tests_init_py.snap
---
source: crates/willikins-cli/tests/walter_document.rs
expression: "format!(\"{}\\n---\\n{}\", file.path(), file.content())"
---
apps/walter/tools/tests/__init__.py
---
"""Package marker: lets `unittest discover -s ... -t .` import this directory."""
