crates/willikins-cli/tests/snapshots/walter_document__walter_render_walter_entitlements.snap
---
source: crates/willikins-cli/tests/walter_document.rs
expression: "format!(\"{}\\n---\\n{}\", file.path(), file.content())"
---
apps/walter/ios/Resources/Walter.entitlements
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
    <key>com.apple.developer.healthkit</key>
    <true/>
    <key>aps-environment</key>
    <string>production</string>
    <key>com.apple.security.application-groups</key>
    <array>
        <string>group.com.bande-a-bonnot.walter</string>
    </array>
    <key>com.apple.developer.default-data-protection</key>
    <string>NSFileProtectionCompleteUntilFirstUserAuthentication</string>
    <key>com.apple.developer.devicecheck.appattest-environment</key>
    <string>production</string>
</dict>
</plist>
