crates/willikins-cli/tests/snapshots/walter_document__walter_render_walter_gitignore.snap
---
source: crates/willikins-cli/tests/walter_document.rs
expression: "format!(\"{}\\n---\\n{}\", file.path(), file.content())"
---
apps/walter/.gitignore
---
/.ci-artifacts/
